Fixed styling issues on mobile

--- a/hangman/src/scss/_breakpoints.scss
+++ b/hangman/src/scss/_breakpoints.scss
@@ -22,7 +22,7 @@
   }
 }
 
-@mixin k {
+@mixin ul {
   @media (min-width: 3000px) {
     @content;
   }
