--- a/hangman/src/scss/main.scss
+++ b/hangman/src/scss/main.scss
@@ -14,13 +14,13 @@ body {
   overflow: auto;
   width: 100vw;
   height: 100vh;
-  font-size: 30px;
+  font-size: 20px;
 
   @include md {
     font-size: 36px;
   }
 
-  @include xl {
+  @include ul {
     font-size: 48px;
   }
 }
@@ -34,13 +34,14 @@ main {
   padding: 1.5rem;
 
   display: grid;
-  grid-template-rows: 0.95fr auto auto;
+  grid-template-rows: 0.9fr auto auto;
   grid-template-areas: "gallow" "missed" "word";
 
   @include md {
     padding: 2rem;
     grid-template-rows: 1fr 1fr;
     grid-template-areas: "gallow missed" "word word";
+    grid-template-rows: 0.95fr auto auto;
   }
 
   @include lg {
